--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "language",
     "speech"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mastermunj/pronounceability.git"
+  },
   "license": "MIT",
   "author": "Munjal Dhamecha",
   "main": "dist/index.js",
@@ -18,7 +22,7 @@
     "build:watch": "npm run build -- --watch",
     "clean": "rimraf dist coverage",
     "commit": "git-cz",
-    "lint": "eslint --ext .ts .",
+    "lint": "eslint --max-warnings=0 .",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky",
     "release": "standard-version",
@@ -32,26 +36,26 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^22.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.16.1",
-    "@typescript-eslint/parser": "^7.16.1",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "an-array-of-english-words": "^2.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.7",
-    "prettier": "^3.3.3",
+    "lint-staged": "^15.2.11",
+    "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
-    "sort-package-json": "^2.10.0",
+    "sort-package-json": "^2.12.0",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2"
   }
 }
