--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepare": "husky",
     "release": "standard-version",
     "release:mock": "npm run release -- --dry-run",
-    "test": "jest --detectOpenHandles --coverage",
+    "test": "vitest",
     "test:watch": "npm run test -- --watch"
   },
   "config": {
@@ -38,24 +38,22 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@types/jest": "^30.0.0",
     "@types/node": "^24.0.1",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "an-array-of-english-words": "^2.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.7",
-    "jest": "^30.0.0",
     "lint-staged": "^16.0.0",
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "sort-package-json": "^3.0.0",
     "standard-version": "^9.5.0",
-    "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^3.2.4"
   }
 }
